session4/configs/authors/authors-fault-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
spec:
  hosts:
    - authors
  http:
    - fault:
        abort:
          httpStatus: 500
          percent: 100
      match:
        - headers:
            end-user:
              exact: Sverdlov Ivan
      route:
        - destination:
            host: authors
            subset: v1
    - route:
        - destination:
            host: authors
            subset: v1
